--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY FIRST PORTFOLIO</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <header>
-<nav></nav>
+<body class="open-sans-normal">
+    <header class="header">
+<nav>
+     <h1 class="nav-title">Mehe<span class="text-primary">d</span>i</h1>
+     <ul>
+        <li><a class="dark-2" href="">Portfolio</a></li>
+        <li><a class="dark-2" href="">Blog</a></li>
+        <li><button class="btn-primary">Hire Me</button></li>
+     </ul>
+</nav>
+ <div class="banner">
+    <div class="banner-content">
+        <h4 class="banner-greetings dark-2">Hi, I  am</h4>
+        <h1 class="banner-title">Mehedi Hasan</h1>
+         <p class="banner-description dark-2">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+        <button class="btn-primary">Download CV</button>
+        <button class="btn-primary">Contact</button>
+    </div>
+    <img class="banner-profile" src="/images/hardy.png" alt="">
+ </div>
     </header>
     <main>
 
