--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="open-sans-normal">
-    <header class="header">
+    <header class="header secondary-color">
 <nav>
      <h1 class="nav-title">Mehe<span class="text-primary">d</span>i</h1>
      <ul>
@@ -31,7 +31,28 @@
  </div>
     </header>
     <main>
-
+<section class="about secondary-color">
+   <h1 class="section-title">About Me</h1>
+   <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+  <div class="about-items">
+    <div class="about-item">
+        <p class="item-title">Name:</p>
+        <p class="item-description">Mehedi Hasan</p>
+    </div>
+    <div class="about-item">
+        <p class="item-title">Email:</p>
+        <p class="item-description">mehedi@gmail.com</p>
+    </div>
+    <div class="about-item">
+        <p class="item-title">Date of birth:</p>
+        <p class="item-description">29/09/2001</p>
+    </div>
+    <div class="about-item">
+        <p class="item-title">From:</p>
+        <p class="item-description">Dhaka</p>
+    </div>
+  </div>
+</section>
     </main>
     <footer>
         
