--- a/index.html
+++ b/index.html
@@ -86,7 +86,51 @@
         </div>
     </div>
  </section>
-    </main>
+
+<!-- section 3 -->
+      <section class="resume">
+          <h1 class="resume-head1">A summary of My Resume</h1>
+        <div class="resume-container">
+<div class="resume-head">
+    <h1>My Education</h1>
+    <h3>Master in Computer Engineering</h3>
+    <h5>Harvard University / 2015 - 2017</h5>
+    <p class="dark-2">List skill/technologies here. You can change the icon above 
+        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p><hr>
+    <h1>My Education</h1>
+    <h3>Master in Computer Engineering</h3>
+    <h5>Harvard University / 2015 - 2017</h5>
+    <p class="dark-2">List skill/technologies here. You can change the icon above 
+        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p><hr>
+    <h1>My Education</h1>
+    <h3>Master in Computer Engineering</h3>
+    <h5>Harvard University / 2015 - 2017</h5>
+    <p class="dark-2">List skill/technologies here. You can change the icon above 
+        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p><hr>
+</div>
+<div class="resume-column">
+    <h1>My Education</h1>
+    <h3>Master in Computer Engineering</h3>
+    <h5>Harvard University / 2015 - 2017</h5>
+    <p class="dark-2">List skill/technologies here. You can change the icon above 
+        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p><hr>
+    <h1>My Education</h1>
+    <h3>Master in Computer Engineering</h3>
+    <h5>Harvard University / 2015 - 2017</h5>
+    <p class="dark-2">List skill/technologies here. You can change the icon above 
+        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p><hr>
+    <h1>My Education</h1>
+    <h3>Master in Computer Engineering</h3>
+    <h5>Harvard University / 2015 - 2017</h5>
+    <p class="dark-2">List skill/technologies here. You can change the icon above 
+        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p><hr>
+</div>
+     </div>
+     <div class="resume-button">
+        <button class="btn-primary">Download CV</button>
+     </div>
+      </section>
+     </main>
     <footer>
         
     </footer>
