--- a/index.html
+++ b/index.html
@@ -131,7 +131,25 @@
      </div>
       </section>
      </main>
-    <footer>
+    <footer class="secondary-color">
+        <div class="footer-column">
+            <h3 class="footer-title">Lets Connect</h3>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div>
+                <a href="https://www.facebook.com/"><img src="/images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="/images/icons/insta.png" alt=""></a>
+                <a href=""><img src="/images/icons/twitter.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Let’s Message me</h3>
+           <form action="">
+            <label for="name"><input id="name" type="text" placeholder="Your name" ></label>
+            <label for="name"><input id="name" type="email" placeholder="Your email" ></label>
+            <textarea name="masses" id="" cols="30" rows="10" placeholder="masses"></textarea>
+            <button class="btn-primary" type="submit">Submit</button>
+           </form>
+        </div>
         
     </footer>
 </body>
