--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button class="btn-primary">Download CV</button>
         <button class="btn-primary">Contact</button>
     </div>
-    <img class="banner-profile" src="/images/hardy.png" alt="">
+    <img class="banner-profile" src="images/hardy.png" alt="">
  </div>
     </header>
     <main>
@@ -136,9 +136,9 @@
             <h3 class="footer-title">Lets Connect</h3>
             <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
             <div>
-                <a href="https://www.facebook.com/"><img src="/images/icons/facebook.png" alt=""></a>
-                <a href=""><img src="/images/icons/insta.png" alt=""></a>
-                <a href=""><img src="/images/icons/twitter.png" alt=""></a>
+                <a href="https://www.facebook.com/"><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
             </div>
         </div>
         <div class="footer-column">
