--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button class="btn-primary">Download CV</button>
         <button class="btn-primary">Contact</button>
     </div>
-    <img class="banner-profile" src="images/hardy.png" alt="">
+    <img class="banner-profile" src="images/Screenshot 2025-01-12 220213.png" alt="">
  </div>
     </header>
     <main>
@@ -65,22 +65,22 @@
     </p>
     <div class="skills-container">
         <div class="skill">
-            <img src="/images/icons/js.png" alt="">
+            <img src="images/icons/js.png" alt="">
             <h4 class="skill-title">Vanilla JavaScript</h4>
             <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
         </div>
         <div class="skill">
-            <img src="/images/icons/nodejs.png" alt="">
+            <img src="images/icons/nodejs.png" alt="">
             <h4 class="skill-title">Node.js</h4>
             <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
         </div>
         <div class="skill">
-            <img src="/images/icons/react.png" alt="">
+            <img src="images/icons/react.png" alt="">
             <h4 class="skill-title">React</h4>
             <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
         </div>
         <div class="skill">
-            <img src="/images/icons/mongo.png" alt="">
+            <img src="images/icons/mongo.png" alt="">
             <h4 class="skill-title">MongoDB</h4>
             <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
         </div>
