--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button class="btn-primary">Download CV</button>
         <button class="btn-primary">Contact</button>
     </div>
-    <img class="banner-profile" src="/images/cropped_image.png" alt="">
+    <img class="banner-profile" src="images/cropped_image.png" alt="">
  </div>
     </header>
     <main>
